<resources>
    <string name="app_name">My Application</string>
    <string name="title_home">Main</string>
    <string name="title_dashboard">Settings</string>
    <string name="title_notifications">Extra</string>
    <string name="set_commander_phone">Set Commander Phone</string>
    <string name="message_status">[Message Status]</string>
    <string name="commander_status">[Commander Status]</string>
    <string name="setcommander_address">Forward Phone</string>
</resources>
